test/domains/compilerErrors/constDomain4.chpl
const d: domain(int);
d.clear();

