test/domains/compilerErrors/constDomain4.good
constDomain4.chpl:2: error: const actual is passed to 'ref' formal 'this' of clear()
note: to formal of type DefaultAssociativeDom(int(64),true)
